fix: mobile flex removed
The UX was not optimal as a result. It was not clear that you could scroll and the guest order button was not visible.
For now flex removed and the login buttons are below each other

--- a/src/QUI/ERP/Order/Controls/OrderProcess.css
+++ b/src/QUI/ERP/Order/Controls/OrderProcess.css
@@ -43,6 +43,7 @@
 
 /** processing / time line
  ============================================*/
+
 .quiqqer-order-ordering-timeline {
     margin-bottom: 2rem;
 }
@@ -389,7 +390,7 @@
     }
 
     .quiqqer-order-ordering-nobody-tabNav {
-        display: flex;
+        /*display: flex;*/
         padding-block: 1rem;
         overflow: auto;
         white-space: nowrap;
